--- a/semana 2/semana_2.ipynb
+++ b/semana 2/semana_2.ipynb
@@ -61,17 +61,17 @@
       "                 precision    recall  f1-score   support\n",
       "\n",
       "    Iris-setosa       1.00      1.00      1.00        25\n",
-      "Iris-versicolor       0.86      0.96      0.91        25\n",
-      " Iris-virginica       0.95      0.84      0.89        25\n",
+      "Iris-versicolor       0.85      0.92      0.88        25\n",
+      " Iris-virginica       0.91      0.84      0.87        25\n",
       "\n",
-      "       accuracy                           0.93        75\n",
-      "      macro avg       0.94      0.93      0.93        75\n",
-      "   weighted avg       0.94      0.93      0.93        75\n",
+      "       accuracy                           0.92        75\n",
+      "      macro avg       0.92      0.92      0.92        75\n",
+      "   weighted avg       0.92      0.92      0.92        75\n",
       "\n",
       "[[25  0  0]\n",
-      " [ 0 24  1]\n",
+      " [ 0 23  2]\n",
       " [ 0  4 21]]\n",
-      "Porcentagem acertos:  93.33%\n"
+      "Porcentagem acertos:  92.00%\n"
      ]
     },
     {
@@ -84,6 +84,9 @@
     }
    ],
    "source": [
+    "# https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html\n",
+    "# https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html\n",
+    "\n",
     "import pandas as pd \n",
     "import numpy as np\n",
     "\n",
@@ -93,13 +96,21 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
+    "# Ler arquivo e Pegar colunas\n",
     "names_columns = [\"sepal_length\", \"sepal_width\", \"petal_length\", \"petal_width\", \"Class\"]\n",
     "df = pd.read_csv(\"iris.data\", names=names_columns)\n",
+    "\n",
+    "# Especie de PRINT pra vê o arquivo\n",
     "df.Class.unique()\n",
     "\n",
+    "# Separo as classes pelos tipos de flores\n",
     "setosa = df[(df['Class'] == 'Iris-setosa')]\n",
     "versicolor = df[(df['Class'] == 'Iris-versicolor')]\n",
     "virginica = df[(df['Class'] == 'Iris-virginica')]\n",
+    "\n",
+    "\n",
+    "# train_test_split: Dividir arrays ou matrizes em subconjuntos aleatórios de treino e teste\n",
+    "# test_size=0.5 (tamanho da divisão, ex: 0.5 representa a metade)\n",
     "\n",
     "# SETOSA\n",
     "setosa_x = setosa[setosa.columns[:4:]]\n",
@@ -119,6 +130,8 @@
     "\n",
     "virginica_x_treino, virginica_x_teste, virginica_y_treino, virginica_y_teste = train_test_split (virginica_x, virginica_y,test_size=0.5)\n",
     "\n",
+    "\n",
+    "# Junta os conjuntos de treino e teste pelos grupos\n",
     "# TREINO\n",
     "x_treino = pd.concat([setosa_x_treino, versicolor_x_treino, virginica_x_treino])\n",
     "y_treino = pd.concat([setosa_y_treino, versicolor_y_treino, virginica_y_treino])\n",
@@ -127,12 +140,15 @@
     "x_teste = pd.concat([setosa_x_teste, versicolor_x_teste, virginica_x_teste])\n",
     "y_teste = pd.concat([setosa_y_teste, versicolor_y_teste, virginica_y_teste])\n",
     "\n",
-    "\n",
+    "# Padroniza os recursos removendo a média e dimensionando para a variação da unidade\n",
     "scaler = StandardScaler()\n",
+    "# Calcula a média e o padrão a serem usados para dimensionamento posterior\n",
+    "# Ajusta aos dados e, em seguida, transforma-os.\n",
     "scaler.fit(x_treino)\n",
     "x_treino = scaler.transform(x_treino)\n",
     "x_teste = scaler.transform(x_teste)\n",
     "\n",
+    "# Classificador que implementa o voto dos k vizinhos mais próximos.\n",
     "classifier = KNeighborsClassifier(n_neighbors=1)\n",
     "classifier.fit(x_treino, y_treino)\n",
     "\n",
@@ -153,27 +169,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                 precision    recall  f1-score   support\n",
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/laisy/.local/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3433, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/tmp/ipykernel_51610/3231937612.py\", line 52, in <module>\n",
+      "    df.x_teste.iterrows()\n",
+      "  File \"/home/laisy/.local/lib/python3.8/site-packages/pandas/core/generic.py\", line 5902, in __getattr__\n",
+      "    return object.__getattribute__(self, name)\n",
+      "AttributeError: 'DataFrame' object has no attribute 'x_teste'\n",
       "\n",
-      "    Iris-setosa       1.00      1.00      1.00        25\n",
-      "Iris-versicolor       0.92      0.92      0.92        25\n",
-      " Iris-virginica       0.92      0.92      0.92        25\n",
+      "During handling of the above exception, another exception occurred:\n",
       "\n",
-      "       accuracy                           0.95        75\n",
-      "      macro avg       0.95      0.95      0.95        75\n",
-      "   weighted avg       0.95      0.95      0.95        75\n",
-      "\n",
-      "[[25  0  0]\n",
-      " [ 0 23  2]\n",
-      " [ 0  2 23]]\n",
-      "Porcentagem acertos:  94.67%\n"
+      "Traceback (most recent call last):\n",
+      "  File \"/home/laisy/.local/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 2052, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "  File \"/home/laisy/.local/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1112, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "  File \"/home/laisy/.local/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1006, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "  File \"/home/laisy/.local/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 859, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "  File \"/home/laisy/.local/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 793, in format_exception_as_a_whole\n",
+      "    self.get_records(etb, number_of_lines_of_context, tb_offset) if etb else []\n",
+      "  File \"/home/laisy/.local/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 839, in get_records\n",
+      "    style = stack_data.style_with_executing_node(style, self._tb_highlight)\n",
+      "  File \"/home/laisy/.local/lib/python3.8/site-packages/stack_data/core.py\", line 441, in style_with_executing_node\n",
+      "    class NewStyle(style):\n",
+      "  File \"/usr/lib/python3/dist-packages/pygments/style.py\", line 91, in __new__\n",
+      "    ndef[4] = colorformat(styledef[3:])\n",
+      "  File \"/usr/lib/python3/dist-packages/pygments/style.py\", line 58, in colorformat\n",
+      "    assert False, \"wrong color format %r\" % text\n",
+      "AssertionError: wrong color format 'ansiyellow'\n"
      ]
     }
    ],
@@ -226,16 +266,21 @@
     "\n",
     "y_pred = y_teste.copy()\n",
     "\n",
-    "# para cada iteração do loop externo onde terá as informações da instância atual do conjunto de teste, todas as instâncias do conjunto treino serão percorridas, calculando a distância e substituindo a classe no dataframe de predição caso seja a menor distância\n",
-    "for index1, row1 in x_teste.iterrows():\n",
+    "# para cada iteração do loop externo: terá as informações da instância atual do conjunto de teste, todas as instâncias do conjunto treino serão percorridas, \n",
+    "# calculando a distância e substituindo a classe no dataframe de predição caso seja a menor distância\n",
+    "\n",
+    "# Métodos do Pandas - iterrows: gera um objeto iterador do DataFrame, permitindo iterar cada linha do DataFrame.\n",
+    "# Cada iteração produz um objeto de índice e um objeto de linha (um objeto da série Pandas).\n",
+    "for k, row1 in x_teste.iterrows():\n",
     "    array_dist_teste = array_valores(row1)\n",
+    "    # maior tamanho possivel para ir atualizando\n",
     "    menor_dist = 999999.9\n",
-    "    for index2, row2 in x_treino.iterrows():\n",
+    "    for j, row2 in x_treino.iterrows():\n",
     "        array_dist_treino = array_valores(row2)\n",
     "        distancia = calc_distancia(array_dist_treino, array_dist_teste)\n",
     "        if (distancia < menor_dist):\n",
     "            menor_dist = distancia\n",
-    "            y_pred.loc[index1, 'Class'] = y_treino.loc[index2, 'Class']\n",
+    "            y_pred.loc[k, 'Class'] = y_treino.loc[j, 'Class']\n",
     "\n",
     "print(classification_report(y_teste, y_pred))\n",
     "print(confusion_matrix(y_teste, y_pred))\n",
@@ -320,7 +365,7 @@
     "x_treino = scaler.transform(x_treino)\n",
     "x_teste = scaler.transform(x_teste)\n",
     "\n",
-    "# PESO\n",
+    "# PESO: weights='distance'\n",
     "classificador = KNeighborsClassifier(n_neighbors=7, weights='distance')\n",
     "classificador.fit(x_treino, y_treino)\n",
     "\n",
@@ -409,6 +454,7 @@
     "x_treino = scaler.transform(x_treino)\n",
     "x_teste = scaler.transform(x_teste)\n",
     "\n",
+    "# SEM PESO\n",
     "classificador = KNeighborsClassifier(n_neighbors=7)\n",
     "classificador.fit(x_treino, y_treino)\n",
     "\n",
