--- a/semana 2/semana_2.ipynb
+++ b/semana 2/semana_2.ipynb
@@ -222,6 +222,7 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "def calc_distancia(treino, teste):\n",
