--- a/semana 2/semana_2.ipynb
+++ b/semana 2/semana_2.ipynb
@@ -169,51 +169,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/home/laisy/.local/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3433, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/tmp/ipykernel_51610/3231937612.py\", line 52, in <module>\n",
-      "    df.x_teste.iterrows()\n",
-      "  File \"/home/laisy/.local/lib/python3.8/site-packages/pandas/core/generic.py\", line 5902, in __getattr__\n",
-      "    return object.__getattribute__(self, name)\n",
-      "AttributeError: 'DataFrame' object has no attribute 'x_teste'\n",
+      "                 precision    recall  f1-score   support\n",
       "\n",
-      "During handling of the above exception, another exception occurred:\n",
+      "    Iris-setosa       1.00      1.00      1.00        25\n",
+      "Iris-versicolor       0.88      0.92      0.90        25\n",
+      " Iris-virginica       0.92      0.88      0.90        25\n",
       "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/laisy/.local/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 2052, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "  File \"/home/laisy/.local/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1112, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "  File \"/home/laisy/.local/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1006, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "  File \"/home/laisy/.local/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 859, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "  File \"/home/laisy/.local/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 793, in format_exception_as_a_whole\n",
-      "    self.get_records(etb, number_of_lines_of_context, tb_offset) if etb else []\n",
-      "  File \"/home/laisy/.local/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 839, in get_records\n",
-      "    style = stack_data.style_with_executing_node(style, self._tb_highlight)\n",
-      "  File \"/home/laisy/.local/lib/python3.8/site-packages/stack_data/core.py\", line 441, in style_with_executing_node\n",
-      "    class NewStyle(style):\n",
-      "  File \"/usr/lib/python3/dist-packages/pygments/style.py\", line 91, in __new__\n",
-      "    ndef[4] = colorformat(styledef[3:])\n",
-      "  File \"/usr/lib/python3/dist-packages/pygments/style.py\", line 58, in colorformat\n",
-      "    assert False, \"wrong color format %r\" % text\n",
-      "AssertionError: wrong color format 'ansiyellow'\n"
+      "       accuracy                           0.93        75\n",
+      "      macro avg       0.93      0.93      0.93        75\n",
+      "   weighted avg       0.93      0.93      0.93        75\n",
+      "\n",
+      "[[25  0  0]\n",
+      " [ 0 23  2]\n",
+      " [ 0  3 22]]\n",
+      "Porcentagem acertos:  93.33%\n"
      ]
     }
    ],
