--- a/semana 4/semana_4.ipynb
+++ b/semana 4/semana_4.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,40 @@
     "from matplotlib import colors\n",
     "from matplotlib.ticker import PercentFormatter\n",
     "from scipy import stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nomes_col = ['B', 'G', 'R', 'Class']\n",
+    "\n",
+    "df = pd.read_csv(\"Skin_NonSkin.csv\")\n",
+    "\n",
+    "x = np.array(df[df.columns[0:3:]])\n",
+    "y = np.array(df[df.columns[-1::]]).flatten()\n",
+    "\n",
+    "skf = StratifiedKFold(n_splits = 100)\n",
+    "\n",
+    "classificador = KNeighborsClassifier(n_neighbors=1)\n",
+    "\n",
+    "array_taxas = []\n",
+    "array_medidasf = []\n",
+    "\n",
+    "for train_index, test_index in skf.split(x,y):\n",
+    "    x_train, x_test = x[train_index], x[test_index]\n",
+    "    y_train, y_test = y[train_index], y[test_index]\n",
+    "\n",
+    "    classificador.fit(x_train, y_train)\n",
+    "    taxas = classificador.score(x_test, y_test)\n",
+    "    array_taxas.append(taxas)\n",
+    "    y_pred = classificador.predict(x_test)\n",
+    "    recall = recall_score(y_test, y_pred)\n",
+    "    precisao = precision_score(y_test, y_pred)\n",
+    "    array_medidasf.append((2*precisao*recall)/(precisao+recall))\n",
+    "\n"
    ]
   },
   {
