--- a/semana 5/semana_5.ipynb
+++ b/semana 5/semana_5.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,18 +74,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Media: 0.6924270633000663\n",
-      "Intervalo: [0.5898054239111158, 0.7950487026890168]\n",
+      "Media: 0.7068799122516448\n",
+      "Intervalo: [0.6081720918281037, 0.8055877326751859]\n",
       "\n",
-      "Media: 0.738035900903296\n",
-      "Intervalo: [0.6557647638830993, 0.8203070379234926]\n",
+      "Media: 0.7574390998608128\n",
+      "Intervalo: [0.6668693177385209, 0.8480088819831048]\n",
       "\n"
      ]
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,6 +264,8 @@
     "from matplotlib import pyplot as plt\n",
     "from matplotlib import colors\n",
     "from matplotlib.ticker import PercentFormatter\n",
+    "import scipy as sp                                                         \n",
+    "import scipy.stats \n",
     "from scipy import stats\n",
     "import seaborn as sns\n",
     "from sklearn.datasets import fetch_openml\n",
@@ -273,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +342,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +364,7 @@
        "<AxesSubplot: title={'center': 'Missing values in percentage'}, ylabel='percentage'>"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -385,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +442,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +524,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +565,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +881,7 @@
        "[294 rows x 14 columns]"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,14 +904,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.5666666666666667, 0.7666666666666667, 0.7, 0.8333333333333334, 0.6, 0.6666666666666666, 0.5666666666666667, 0.6, 0.4666666666666667, 0.6333333333333333, 0.7333333333333333, 0.8666666666666667, 0.9, 0.6333333333333333, 0.6333333333333333, 0.7, 0.6333333333333333, 0.6666666666666666, 0.7, 0.7, 0.5666666666666667, 0.7, 0.7666666666666667, 0.5333333333333333, 0.6666666666666666, 0.8, 0.8, 0.6, 0.6666666666666666, 0.5333333333333333, 0.8, 0.7, 0.6, 0.6333333333333333, 0.6, 0.7333333333333333, 0.6, 0.7, 0.6333333333333333, 0.6333333333333333, 0.7333333333333333, 0.7333333333333333, 0.8, 0.7333333333333333, 0.7666666666666667, 0.7666666666666667, 0.6666666666666666, 0.6666666666666666, 0.5, 0.6333333333333333, 0.7333333333333333, 0.7, 0.7, 0.6, 0.5666666666666667, 0.7333333333333333, 0.7, 0.7333333333333333, 0.7, 0.9, 0.6333333333333333, 0.7333333333333333, 0.5666666666666667, 0.7, 0.43333333333333335, 0.6666666666666666, 0.8333333333333334, 0.7666666666666667, 0.5666666666666667, 0.6, 0.6333333333333333, 0.7333333333333333, 0.6666666666666666, 0.7, 0.5666666666666667, 0.6333333333333333, 0.7, 0.7, 0.5, 0.5666666666666667, 0.6666666666666666, 0.7333333333333333, 0.6, 0.7333333333333333, 0.8333333333333334, 0.7, 0.6666666666666666, 0.6666666666666666, 0.7666666666666667, 0.7, 0.8666666666666667, 0.5666666666666667, 0.7, 0.7, 0.6666666666666666, 0.7666666666666667, 0.8, 0.6666666666666666, 0.5666666666666667, 0.6333333333333333]\n"
+      "[0.5333333333333333, 0.6666666666666666, 0.8666666666666667, 0.5333333333333333, 0.6666666666666666, 0.5666666666666667, 0.7333333333333333, 0.7, 0.8, 0.7666666666666667, 0.6333333333333333, 0.7333333333333333, 0.8, 0.8, 0.6666666666666666, 0.8, 0.6, 0.5, 0.6, 0.9, 0.6, 0.8333333333333334, 0.6, 0.6, 0.4, 0.6666666666666666, 0.6333333333333333, 0.7333333333333333, 0.6333333333333333, 0.6333333333333333, 0.5666666666666667, 0.7333333333333333, 0.7333333333333333, 0.8, 0.8666666666666667, 0.8333333333333334, 0.7666666666666667, 0.8, 0.6333333333333333, 0.5, 0.5666666666666667, 0.6, 0.7666666666666667, 0.7, 0.7, 0.8333333333333334, 0.7333333333333333, 0.6, 0.8333333333333334, 0.7, 0.6333333333333333, 0.7, 0.5, 0.6666666666666666, 0.7333333333333333, 0.5333333333333333, 0.7333333333333333, 0.6, 0.6333333333333333, 0.7, 0.6333333333333333, 0.7, 0.5333333333333333, 0.7333333333333333, 0.7666666666666667, 0.6666666666666666, 0.6, 0.5333333333333333, 0.6666666666666666, 0.7, 0.7666666666666667, 0.8, 0.6333333333333333, 0.5333333333333333, 0.6333333333333333, 0.8, 0.7666666666666667, 0.7, 0.6, 0.7333333333333333, 0.8, 0.6666666666666666, 0.7333333333333333, 0.7, 0.5666666666666667, 0.6666666666666666, 0.6, 0.6333333333333333, 0.7333333333333333, 0.7, 0.5666666666666667, 0.6666666666666666, 0.6666666666666666, 0.6333333333333333, 0.6333333333333333, 0.5666666666666667, 0.7666666666666667, 0.8, 0.6666666666666666, 0.6666666666666666]\n"
      ]
     }
    ],
@@ -921,17 +923,82 @@
     "\n",
     "classificador = KNeighborsClassifier(n_neighbors=1)\n",
     "\n",
-    "array_taxas = []\n",
+    "lists_rates = []\n",
     "\n",
     "for train_index, test_index in skf.split(x,y):\n",
     "    x_train, x_test, y_train, y_test = train_test_split (x, y, test_size=0.1)\n",
     "\n",
     "    classificador.fit(x_train, y_train)\n",
     "    taxas = classificador.score(x_test, y_test)\n",
-    "    array_taxas.append(taxas)\n",
+    "    lists_rates.append(taxas)\n",
     "    y_pred = classificador.predict(x_test)\n",
     "\n",
-    "print(array_taxas)"
+    "print(lists_rates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_separate_averages(lists_rates):\n",
+    "\n",
+    "    exit = {}\n",
+    "    aux = []\n",
+    "    \n",
+    "    for x in range(len(lists_rates)): \n",
+    "        # calcula a media de um numpy rray \n",
+    "        aux.append(np.mean(lists_rates[x]))          \n",
+    "        exit[x+1] = aux\n",
+    "        aux = []\n",
+    "    return aux\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_confidence_interval(total_average, total_differences):\n",
+    "        for x in range(len(array_taxas)):\n",
+    "            \n",
+    "            standard_deviation = np.std(array_taxas[x])\n",
+    "            standard_error = standard_deviation/np.sqrt(len(array_taxas[x]))\n",
+    "            multi = abs(stats.distributions.norm.ppf(0.025))\n",
+    "\n",
+    "            print(x+1, (array_taxas[x] - multi*standard_error, array_taxas[x] + multi*standard_error))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "media:0.6783333333333335\n",
+      "\n",
+      "\n",
+      "intervalo de confiança: \n",
+      "(0.4893494813419292, 0.8673171853247377)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#calcular a matriz média                                               \n",
+    "total_average = np.mean(lists_rates)                                           \n",
+    "print('media:{}'.format(total_average))                                            \n",
+    "\n",
+    "desvio_padrao = np.std(lists_rates)                                          \n",
+    "conf_int = scipy.stats.norm.interval(0.95, loc=total_average, scale=desvio_padrao) \n",
+    "\n",
+    "print('\\n')\n",
+    "print(\"intervalo de confiança: \")\n",
+    "print(conf_int)"
    ]
   }
  ],
