--- a/semana 6/semana_6.ipynb
+++ b/semana 6/semana_6.ipynb
@@ -5,6 +5,271 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Q1 - INCOMPLETA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import StratifiedKFold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def saidaNeuronio(w, ex):\n",
+    "    v = 0\n",
+    "    for i in range(len(ex)):\n",
+    "        v = v + w[i] * ex[i]\n",
+    "        if (v > 0):\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return 0\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def treinamento(y, x, eta, n, d, w, erroMax):\n",
+    "    erroTotal = erroMax\n",
+    "    epoca = 0\n",
+    "    i = 0\n",
+    "    j = 0\n",
+    "    k = 0\n",
+    "    atualizacao = 0\n",
+    "    # printSuperficieDecisao(300, -1, 2, -1, 2, w, x, y, 10, \"Início\")\n",
+    "    while(erroTotal >= erroMax):\n",
+    "        epoca += 1\n",
+    "        print(\"\\n Epoca\" + epoca)\n",
+    "        while(i < n):\n",
+    "            f = saidaNeuronio(w, x[i])\n",
+    "            delta = y[i] - f\n",
+    "            erro = delta * delta\n",
+    "            erroTotal = erroTotal + erro\n",
+    "            print(\"y[\" + i + \"]=\" + y[i] + \",f=\" + f)\n",
+    "            if(erro > 0):\n",
+    "                atualizacao += 1\n",
+    "                # atualiza os pesos\n",
+    "                while(j < d):\n",
+    "                    w[j] = w[j] + eta + x[i][j] * delta\n",
+    "                    print(\",w[\" + j + \"]=\" + w[j])\n",
+    "                    # printSuperficieDecisao(300, -1, 2, -1, 2, w, x, y, 10, \"Atualizacao #\" + atualizacao)\n",
+    "                    j += 1\n",
+    "            i += 1\n",
+    "        \n",
+    "        # Calcula o erro do neuronio\n",
+    "        erroTotal = 0\n",
+    "        while(k < n):\n",
+    "            f = saidaNeuronio(w, x[i])\n",
+    "            delta = y[i] - f\n",
+    "            erro = delta * delta\n",
+    "            erroTotal = erroTotal + erro\n",
+    "        print(\"Erro Total = \" + erroTotal)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>6.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>5.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>150 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0    1    2    3               4\n",
+       "0    5.1  3.5  1.4  0.2     Iris-setosa\n",
+       "1    4.9  3.0  1.4  0.2     Iris-setosa\n",
+       "2    4.7  3.2  1.3  0.2     Iris-setosa\n",
+       "3    4.6  3.1  1.5  0.2     Iris-setosa\n",
+       "4    5.0  3.6  1.4  0.2     Iris-setosa\n",
+       "..   ...  ...  ...  ...             ...\n",
+       "145  6.7  3.0  5.2  2.3  Iris-virginica\n",
+       "146  6.3  2.5  5.0  1.9  Iris-virginica\n",
+       "147  6.5  3.0  5.2  2.0  Iris-virginica\n",
+       "148  6.2  3.4  5.4  2.3  Iris-virginica\n",
+       "149  5.9  3.0  5.1  1.8  Iris-virginica\n",
+       "\n",
+       "[150 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"iris.data\", header=None)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = df[df.columns[:-1]].to_numpy()\n",
+    "y = df[df.columns[-1]].to_numpy()\n",
+    "\n",
+    "treinoX, testeX, treinoY, testeY = train_test_split(x,y,test_size=0.50, random_state=1)\n",
+    "\n",
+    "skf = StratifiedKFold(n_splits=2)\n",
+    "\n",
+    "for train, test in skf.split(x, y):\n",
+    "    X_train, X_test = x[train], x[test]\n",
+    "    y_train, y_test = y[train], y[test]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(y)):\n",
+    "    treinoX, testeX, treinoY, testeY = train_test_split(x,y,test_size=0.50)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Q2"
    ]
   },
@@ -391,6 +656,104 @@
     "print(\"Desvio Padrão acuracia: \" + str(desvioPadraoAmostral(accuracyList)))\n",
     "print(\"\\n\")\n",
     "print(\"Media da acuracia: \" + str(mediaAmostral(accuracyList)))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q3 - INCOMPLETA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neural_network import MLPClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"spiral.csv\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 1, loss = 1.19349639\n",
+      "Iteration 2, loss = 1.20373912\n",
+      "Iteration 3, loss = 1.20195108\n",
+      "Iteration 4, loss = 1.14661321\n",
+      "Iteration 5, loss = 1.10686153\n",
+      "Iteration 6, loss = 1.11330905\n",
+      "Iteration 7, loss = 1.12877919\n",
+      "Iteration 8, loss = 1.13165280\n",
+      "Iteration 9, loss = 1.12488347\n",
+      "Iteration 10, loss = 1.11484448\n",
+      "Iteration 11, loss = 1.10523947\n",
+      "Iteration 12, loss = 1.09955468\n",
+      "Iteration 13, loss = 1.10028309\n",
+      "Iteration 14, loss = 1.10597132\n",
+      "Iteration 15, loss = 1.11138056\n",
+      "Iteration 16, loss = 1.11206644\n",
+      "Iteration 17, loss = 1.10786002\n",
+      "Iteration 18, loss = 1.10194249\n",
+      "Iteration 19, loss = 1.09784171\n",
+      "Iteration 20, loss = 1.09718153\n",
+      "Iteration 21, loss = 1.09924106\n",
+      "Iteration 22, loss = 1.10199298\n",
+      "Iteration 23, loss = 1.10357208\n",
+      "Iteration 24, loss = 1.10320719\n",
+      "Iteration 25, loss = 1.10132151\n",
+      "Iteration 26, loss = 1.09904881\n",
+      "Iteration 27, loss = 1.09753293\n",
+      "Iteration 28, loss = 1.09732833\n",
+      "Iteration 29, loss = 1.09817248\n",
+      "Iteration 30, loss = 1.09925542\n",
+      "Iteration 31, loss = 1.09980137\n",
+      "Training loss did not improve more than tol=0.000100 for 10 consecutive epochs. Stopping.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.32"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = df[df.columns[0:-1]]\n",
+    "y = df[df.columns[-1]]\n",
+    "\n",
+    "mlp = MLPClassifier(max_iter=35, verbose=True, learning_rate='constant', hidden_layer_sizes=(1,2,3), learning_rate_init=0.3, activation='logistic',)\n",
+    "\n",
+    "treinoX, testeX, treinoY, testeY = train_test_split(x,y,test_size=0.50, random_state=1)\n",
+    "\n",
+    "mlp.fit(treinoX, treinoY)\n",
+    "saida = mlp.predict(testeX)\n",
+    "\n",
+    "mlp.score(testeX, testeY)"
    ]
   }
  ],
